<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.QuestionsFragment">


    <TextView
        android:id="@+id/textView"
        style="@style/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/question_one_button"
        style="@style/question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_one_text"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/question_two_button"
        style="@style/question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_two_text"
        app:layout_constraintTop_toBottomOf="@+id/question_one_button"
        tools:layout_editor_absoluteX="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/question_three_button"
        style="@style/question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/question_three_text"
        app:layout_constraintTop_toBottomOf="@+id/question_two_button"
        tools:layout_editor_absoluteX="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>